Fix alignment of icon in header search input field

--- a/src/components/search/_index.scss
+++ b/src/components/search/_index.scss
@@ -4,7 +4,7 @@
 // Styles below are based on the default accessible autocomplete style sheet
 
 $_icon-size: 28px;
-$_input-padding-right: 12px + $_icon-size;
+$_input-padding-right: nhsuk-px-to-rem(12px + $_icon-size);
 
 @include nhsuk-exports("nhsuk-eleventy-plugin/components/search") {
   .nhsuk-header__search-form[hidden] {
@@ -21,13 +21,17 @@ $_input-padding-right: 12px + $_icon-size;
   .nhsuk-header__search-input.app-search__hint,
   .nhsuk-header__search-input.app-search__input {
     background-color: transparent;
-    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'><path d='M19.71 18.29l-4.11-4.1a7 7 0 1 0-1.41 1.41l4.1 4.11a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42zM5 10a5 5 0 1 1 5 5 5 5 0 0 1-5-5z' fill='%23005eb8'></path></svg>");
-    background-position: center right nhsuk-spacing(1);
+    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'><path d='m20.7 19.3-4.1-4.1a7 7 0 1 0-1.4 1.4l4 4.1a1 1 0 0 0 1.5 0c.4-.4.4-1 0-1.4ZM6 11a5 5 0 1 1 10 0 5 5 0 0 1-10 0Z' fill='%23005eb8'/></svg>");
+    background-position: top nhsuk-px-to-rem(4px) right nhsuk-px-to-rem(7px);
     background-repeat: no-repeat;
-    background-size: $_icon-size;
+    background-size: nhsuk-px-to-rem($_icon-size);
     border-radius: $nhsuk-border-radius;
     padding-right: $_input-padding-right;
     width: 100%;
+
+    &:focus {
+      background-position: top nhsuk-px-to-rem(3px) right nhsuk-px-to-rem(6px);
+    }
   }
 
   .nhsuk-header__search-input.app-search__hint {
